--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="{{ site.language }}">
   <head>
     {% include head.html %}
+	<meta name="google-site-verification" content="vb70zEbGsYAU-Xsz2y3c13_W6D7Mu8EN2cijYOLBnwY" />
   </head>
   <body>
     <div class="container-wrapper">
